Prevent error support text from having scroll bars
Allow long text that details how to open a support ticket to wrap in small dialogs rather than displaying a horizontal scrollbar

--- a/lms/static/styles/components/_ErrorDisplay.scss
+++ b/lms/static/styles/components/_ErrorDisplay.scss
@@ -9,6 +9,11 @@
   padding-right: 5px;
   margin-bottom: 10px;
 
+  &__links {
+    white-space: normal;
+    line-height: 1.25em;
+  }
+
   &__details {
     padding: 4px; // prevents focus ring from getting cut off
     &-summary {
